Fix sr-only bleeding through by enforcing the props

--- a/client/src/css/bundle.scss
+++ b/client/src/css/bundle.scss
@@ -3,13 +3,13 @@
 // }
 
 .cloudinary-field__sr-only {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+    clip: rect(0 0 0 0) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    position: absolute !important;
+    white-space: nowrap !important;
+    width: 1px !important;
 }
 
 .cloudinary-field__inner {
